--- a/src/org/jetbrains/plugins/scala/compiler/ScalacConfigurable.form
+++ b/src/org/jetbrains/plugins/scala/compiler/ScalacConfigurable.form
@@ -13,78 +13,22 @@
           <grid row="5" column="0" row-span="1" col-span="1" vsize-policy="6" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false"/>
         </constraints>
       </vspacer>
-      <grid id="c5c6a" layout-manager="GridLayoutManager" row-count="4" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
-        <margin top="0" left="0" bottom="0" right="0"/>
+      <grid id="c5c6a" layout-manager="GridLayoutManager" row-count="8" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+        <margin top="3" left="3" bottom="3" right="3"/>
         <constraints>
           <grid row="1" column="0" row-span="4" col-span="2" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties/>
-        <border type="none" title="Project FSC instantiation"/>
+        <border type="none" title="Project FSC"/>
         <children>
-          <component id="d9401" class="javax.swing.JLabel">
-            <constraints>
-              <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="1" use-parent-layout="false"/>
-            </constraints>
-            <properties>
-              <enabled value="true"/>
-              <text value="&amp;VM parameters:"/>
-            </properties>
-          </component>
-          <component id="16cad" class="javax.swing.JLabel">
-            <constraints>
-              <grid row="3" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="1" use-parent-layout="false"/>
-            </constraints>
-            <properties>
-              <enabled value="true"/>
-              <text value="FSC &amp;options:"/>
-            </properties>
-          </component>
-          <component id="787fb" class="javax.swing.JLabel">
-            <constraints>
-              <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="1" use-parent-layout="false"/>
-            </constraints>
-            <properties>
-              <enabled value="true"/>
-              <text value="&amp;Maximum heap size, MB:"/>
-            </properties>
-          </component>
-          <component id="9ea43" class="javax.swing.JTextField" binding="myMaximumHeapSize">
-            <constraints>
-              <grid row="1" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
-            </constraints>
-            <properties>
-              <columns value="5"/>
-              <enabled value="true"/>
-            </properties>
-          </component>
           <component id="53241" class="javax.swing.JLabel">
             <constraints>
-              <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="1" use-parent-layout="false"/>
+              <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
               <enabled value="true"/>
+              <labelFor value="9ea43"/>
               <text value="Compiler &amp;library:"/>
-            </properties>
-          </component>
-          <component id="d331e" class="com.intellij.ui.RawCommandLineEditor" binding="myFscOptions">
-            <constraints>
-              <grid row="3" column="1" row-span="1" col-span="1" vsize-policy="3" hsize-policy="7" anchor="8" fill="0" indent="0" use-parent-layout="false">
-                <minimum-size width="250" height="-1"/>
-              </grid>
-            </constraints>
-            <properties>
-              <dialogCaption value="Additional command-line options for Scala compiler"/>
-            </properties>
-          </component>
-          <component id="587c1" class="com.intellij.ui.RawCommandLineEditor" binding="myVmParameters">
-            <constraints>
-              <grid row="2" column="1" row-span="1" col-span="1" vsize-policy="3" hsize-policy="7" anchor="8" fill="0" indent="0" use-parent-layout="false">
-                <minimum-size width="250" height="-1"/>
-              </grid>
-            </constraints>
-            <properties>
-              <dialogCaption value="Java VM command line parameters"/>
-              <enabled value="true"/>
             </properties>
           </component>
           <component id="4b745" class="javax.swing.JComboBox" binding="myCompilerLibrary">
@@ -93,10 +37,161 @@
             </constraints>
             <properties/>
           </component>
+          <component id="eb120" class="javax.swing.JRadioButton" binding="myRunInternalServerRadioButton" default-binding="true">
+            <constraints>
+              <grid row="1" column="0" row-span="1" col-span="2" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+            </constraints>
+            <properties>
+              <text value="Run &amp;internal server"/>
+            </properties>
+          </component>
+          <component id="c2f77" class="javax.swing.JRadioButton" binding="myConnectToExternalServerRadioButton" default-binding="true">
+            <constraints>
+              <grid row="5" column="0" row-span="1" col-span="2" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+            </constraints>
+            <properties>
+              <text value="Connect to &amp;external server"/>
+            </properties>
+          </component>
+          <grid id="a2987" binding="myServerPanel" layout-manager="GridLayoutManager" row-count="3" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+            <margin top="0" left="0" bottom="0" right="0"/>
+            <constraints>
+              <grid row="2" column="0" row-span="3" col-span="2" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="1" use-parent-layout="false"/>
+            </constraints>
+            <properties/>
+            <border type="none"/>
+            <children>
+              <component id="d9401" class="javax.swing.JLabel">
+                <constraints>
+                  <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+                </constraints>
+                <properties>
+                  <enabled value="true"/>
+                  <text value="&amp;VM parameters:"/>
+                </properties>
+              </component>
+              <component id="16cad" class="javax.swing.JLabel">
+                <constraints>
+                  <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+                </constraints>
+                <properties>
+                  <enabled value="true"/>
+                  <text value="FSC &amp;options:"/>
+                </properties>
+              </component>
+              <component id="787fb" class="javax.swing.JLabel">
+                <constraints>
+                  <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+                </constraints>
+                <properties>
+                  <enabled value="true"/>
+                  <labelFor value="9ea43"/>
+                  <text value="&amp;Maximum heap size, MB:"/>
+                </properties>
+              </component>
+              <component id="9ea43" class="javax.swing.JTextField" binding="myMaximumHeapSize">
+                <constraints>
+                  <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+                </constraints>
+                <properties>
+                  <columns value="5"/>
+                  <enabled value="true"/>
+                </properties>
+              </component>
+              <component id="d331e" class="com.intellij.ui.RawCommandLineEditor" binding="myFscOptions">
+                <constraints>
+                  <grid row="2" column="1" row-span="1" col-span="1" vsize-policy="3" hsize-policy="7" anchor="8" fill="0" indent="0" use-parent-layout="false">
+                    <minimum-size width="250" height="-1"/>
+                  </grid>
+                </constraints>
+                <properties>
+                  <dialogCaption value="Additional command-line options for Scala compiler"/>
+                </properties>
+              </component>
+              <component id="587c1" class="com.intellij.ui.RawCommandLineEditor" binding="myVmParameters">
+                <constraints>
+                  <grid row="1" column="1" row-span="1" col-span="1" vsize-policy="3" hsize-policy="7" anchor="8" fill="0" indent="0" use-parent-layout="false">
+                    <minimum-size width="250" height="-1"/>
+                  </grid>
+                </constraints>
+                <properties>
+                  <dialogCaption value="Java VM command line parameters"/>
+                  <enabled value="true"/>
+                </properties>
+              </component>
+            </children>
+          </grid>
+          <grid id="d6d46" binding="myClientPanel" layout-manager="GridLayoutManager" row-count="2" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+            <margin top="0" left="0" bottom="0" right="0"/>
+            <constraints>
+              <grid row="6" column="0" row-span="2" col-span="2" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="1" use-parent-layout="false"/>
+            </constraints>
+            <properties/>
+            <border type="none"/>
+            <children>
+              <component id="cef91" class="com.intellij.openapi.ui.TextFieldWithBrowseButton" binding="mySharedDirectory">
+                <constraints>
+                  <grid row="1" column="1" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false">
+                    <minimum-size width="250" height="-1"/>
+                  </grid>
+                </constraints>
+                <properties/>
+              </component>
+              <component id="589cc" class="javax.swing.JLabel">
+                <constraints>
+                  <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+                </constraints>
+                <properties>
+                  <enabled value="true"/>
+                  <text value="Shared &amp;directory:"/>
+                </properties>
+              </component>
+              <component id="358b9" class="javax.swing.JLabel">
+                <constraints>
+                  <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+                </constraints>
+                <properties>
+                  <enabled value="true"/>
+                  <labelFor value="94a08"/>
+                  <text value="&amp;Host / Port:"/>
+                </properties>
+              </component>
+              <grid id="d4d48" layout-manager="GridLayoutManager" row-count="1" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+                <margin top="0" left="0" bottom="0" right="0"/>
+                <constraints>
+                  <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+                </constraints>
+                <properties/>
+                <border type="none"/>
+                <children>
+                  <component id="94a08" class="javax.swing.JTextField" binding="myRemoteHost">
+                    <constraints>
+                      <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="2" anchor="8" fill="0" indent="0" use-parent-layout="false">
+                        <preferred-size width="150" height="-1"/>
+                      </grid>
+                    </constraints>
+                    <properties>
+                      <columns value="15"/>
+                      <enabled value="true"/>
+                    </properties>
+                  </component>
+                  <component id="43125" class="javax.swing.JTextField" binding="myRemotePort">
+                    <constraints>
+                      <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+                    </constraints>
+                    <properties>
+                      <columns value="5"/>
+                      <enabled value="true"/>
+                    </properties>
+                  </component>
+                </children>
+              </grid>
+            </children>
+          </grid>
         </children>
       </grid>
       <grid id="8fd1d" layout-manager="GridLayoutManager" row-count="2" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
-        <margin top="0" left="0" bottom="0" right="0"/>
+        <margin top="3" left="3" bottom="3" right="3"/>
         <constraints>
           <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
         </constraints>
@@ -108,7 +203,7 @@
               <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
-              <text value="Scalac(*.scala + *.java), Javac(*.java)"/>
+              <text value="&amp;Scalac(*.scala + *.java), Javac(*.java)"/>
               <toolTipText value="Can compile circular dependencies, rely on Scalac Java parser and typer"/>
             </properties>
           </component>
@@ -117,7 +212,7 @@
               <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
-              <text value="Javac(*.java), Scalac(*.scala)"/>
+              <text value="&amp;Javac(*.java), Scalac(*.scala)"/>
               <toolTipText value="Can't compile circular dependencies, consume Java as compiled classes"/>
             </properties>
           </component>
@@ -129,6 +224,10 @@
     <group name="myButtonGroup1">
       <member id="73f9"/>
       <member id="af445"/>
+    </group>
+    <group name="myButtonGroup2">
+      <member id="eb120"/>
+      <member id="c2f77"/>
     </group>
   </buttonGroups>
 </form>
