--- a/src/org/jetbrains/plugins/scala/lang/refactoring/extractMethod/ScalaExtractMethodDialog.form
+++ b/src/org/jetbrains/plugins/scala/lang/refactoring/extractMethod/ScalaExtractMethodDialog.form
@@ -28,6 +28,7 @@
             <constraints>
               <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
             </constraints>
+            <properties/>
           </component>
         </children>
       </grid>
@@ -60,7 +61,7 @@
                   <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
                 </constraints>
                 <properties>
-                  <text value="Pro&amp;tected"/>
+                  <text value="Pr&amp;otected"/>
                 </properties>
               </component>
               <component id="939d4" class="javax.swing.JRadioButton" binding="privateRadioButton" default-binding="true">
