--- a/src/org/jetbrains/plugins/scala/lang/refactoring/extractMethod/ScalaExtractMethodDialog.form
+++ b/src/org/jetbrains/plugins/scala/lang/refactoring/extractMethod/ScalaExtractMethodDialog.form
@@ -69,7 +69,7 @@
                   <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
                 </constraints>
                 <properties>
-                  <text value="Pri&amp;vate"/>
+                  <text value="P&amp;rivate"/>
                 </properties>
               </component>
               <component id="2a5ad" class="javax.swing.JTextField" binding="protectedTextField">
