--- a/src/org/jetbrains/plugins/scala/config/ui/FacetConfigurationEditor.form
+++ b/src/org/jetbrains/plugins/scala/config/ui/FacetConfigurationEditor.form
@@ -3,7 +3,7 @@
   <grid id="27dc6" binding="panelContent" layout-manager="GridLayoutManager" row-count="4" column-count="3" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="0" left="0" bottom="0" right="0"/>
     <constraints>
-      <xy x="20" y="20" width="507" height="681"/>
+      <xy x="20" y="20" width="526" height="681"/>
     </constraints>
     <properties/>
     <border type="none"/>
@@ -262,8 +262,8 @@
               <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
-              <text value="&amp;Optimise bytecode"/>
-              <toolTipText value="Generates faster bytecode by applying optimisations to the program"/>
+              <text value="&amp;Optimise bytecode (use with care*)"/>
+              <toolTipText value="Generates faster bytecode by applying optimisations to the program. May trigger various compilation problems. Use with care."/>
             </properties>
           </component>
           <component id="ecfdc" class="javax.swing.JCheckBox" binding="myExplainTypeErrors">
